--- a/Tablas/estilo/Ejerform.css
+++ b/Tablas/estilo/Ejerform.css
@@ -1,12 +1,10 @@
 
 form {
-    width: 40%;
-    margin-left: 50%;
-    padding: 15px;
+    width: 25%;
     text-align: center;
-    border: 1px solid;
+    border: 2px solid blueviolet;
+    margin: auto;
 }
-#formu {
-    margin: 0 auto;
-    border: 1px solid;
+h1 {
+    text-align: center;
 }
