--- a/TipoExamen/Estilo/Examen.css
+++ b/TipoExamen/Estilo/Examen.css
@@ -81,14 +81,15 @@ hr {
     border: solid 2px brown;
     margin-bottom: 4%;
 }
-.titulopdf {
+h1{
     text-align: left;
     color: brown;
 margin-top: 3%;
+
 }
 iframe {
     width: 98%;
-height: 400px;
+    height: 400px;
 }
 
 .titulomap1 {
@@ -102,4 +103,7 @@ height: 400px;
 }
 #bloquemapa {
     margin-left: 30%;
+}
+.titulo {
+   font-size: x-large; 
 }
