--- a/TipoExamen/Estilo/Practicaexa.css
+++ b/TipoExamen/Estilo/Practicaexa.css
@@ -20,3 +20,20 @@ h2 {
 .titulo1 {
     text-align: center;
 }
+#cuadrito {
+    float: left;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 30%;
+    height: 30%;
+}
+#cuadrito1 {
+    float: left;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 30%;
+    height: 50%;
+}
+label {
+    text-align: right;
+}
