--- a/TipoExamen/Estilo/Practicaexa.css
+++ b/TipoExamen/Estilo/Practicaexa.css
@@ -20,3 +20,13 @@ h2 {
 .titulo1 {
     text-align: center;
 }
+label {
+    width: 50%;
+}
+input {
+    width: 10%;
+    
+}
+#uno {
+    width: 100%;
+}
