--- a/ejemplos HTML5/css/Practihtml5.css
+++ b/ejemplos HTML5/css/Practihtml5.css
@@ -2,6 +2,7 @@
     background-color: grey;
     width: 80%;
     margin: 0 auto;
+   
 }
 h1 {
 text-align: center;
@@ -45,7 +46,21 @@ float: left;
     margin-right: 1%;
 }
 #bloque2 {
-width: 40%;
-margin-top: 0%;
-float: right;
-}
+    width: 40%;
+    margin-top: 0%;
+    float: right;
+    }
+.titu {
+text-align: center;
+
+    }
+    # block1 {
+        float: left;
+        margin-top: 0%;
+        width: 40%;
+    }
+    # block2 {
+        float: right;
+        margin-top: 0%;
+        width: 40%;
+    }
