--- a/ejemplos HTML5/css/Practihtml5.css
+++ b/ejemplos HTML5/css/Practihtml5.css
@@ -1,6 +1,7 @@
 #bloque {
     background-color: grey;
-    width: 80%;
+    width: 60%;
+    height: 400px;
     margin: 0 auto;
    
 }
@@ -10,7 +11,7 @@ margin-bottom: 0%;
 color: red;
 }
 #bloque1 {
-width: 40%;
+width: 120%;
 margin-top: 0%;
 float: left;
 }
@@ -25,6 +26,12 @@ float: left;
    float: left;
    width: 48%;
 }
+#bloque1-3-1 {
+    height: 73px;
+   float: left;
+   width: 48%;
+   margin-bottom: 1%;
+}
 #bloque1-4 {
     height: 150px;
    width: 48%;
@@ -32,8 +39,13 @@ float: left;
 }
 #bloque1-5 {
     height: 30px;
-   
    clear: both;
+}
+#bloque1-6 {
+    height: 66px;
+   float: left;
+   width: 48%;
+  margin-top: 1%;
 }
 .estilo {
     border-style: solid;
@@ -46,20 +58,21 @@ float: left;
     margin-right: 1%;
 }
 #bloque2 {
-    width: 40%;
+    width: 120%;
     margin-top: 0%;
     float: right;
     }
 .titu {
-text-align: center;
-
+    text-align: center;
+    margin-bottom: 0%;
+    color: red;
     }
-    # block1 {
-        float: left;
-        margin-top: 0%;
-        width: 40%;
+#block1 {
+    float: left;
+    margin-top: 0%;
+    width: 40%;
     }
-    # block2 {
+#block2 {
         float: right;
         margin-top: 0%;
         width: 40%;
